--- a/libs/data_structures/CMakeLists.txt
+++ b/libs/data_structures/CMakeLists.txt
@@ -7,4 +7,6 @@ add_library(data_structures
         ordered_array_set/ordered_array_set.h
         vector/vector.h
         vector/vector.c
+        matrix/matrix.c
+        matrix/matrix.h
 )
