Implementation of initial functions (17 lab)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,14 @@ add_executable(13_laba main.c
         libs/algorithms/array/array.h
         libs/algorithms/algorithm.c
         libs/algorithms/algorithm.h
-        libs/algorithms/algorithm.h
-        libs/algorithms/algorithm.h
-        libs/data_structures/unordered_array_set/unordered_array_set.h)
+        libs/data_structures/unordered_array_set/unordered_array_set.c
+        libs/data_structures/unordered_array_set/unordered_array_set.h
+        libs/str/string/string_.c
+        libs/str/string/string_.h
+)
 
 add_subdirectory(libs)
+target_link_libraries(13_laba str)
 target_link_libraries(13_laba data_structures)
 target_link_libraries(13_laba algorithms)
 
