Function testing (17 lab)

--- a/libs/str/CMakeLists.txt
+++ b/libs/str/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(str
         string/string_.h
         string/string_.c
+        test_string/tests.h
+        test_string/tests.c
         # string/tasks/digitToStartTransform.h
         # string/tasks/reverseWords.h
         # string/tasks/replaceDigitsBySpaces.h
