Convert the file, representing each number in floating-point form, keeping the two digits after the dot in the mantissa. (19 lab)

--- a/libs/data_structures/CMakeLists.txt
+++ b/libs/data_structures/CMakeLists.txt
@@ -11,4 +11,6 @@ add_library(data_structures
         matrix/matrix.h
         tests/test.c
         tests/test.h
+        vector/vectorVoid.h
+        vector/vectorVoid.c
 )
